# Dashboard-backend

./: .env  .gitignore  main.py  pyproject.toml
app/core/: config.py  logger.py
app/data/: Book1.xlsx  Normalized_Scores.csv  norank.py  prod_analysis_combined.xlsx  prod_source_scores_normalized_ranked.xlsx  products_without_amazon_with_citations.xlsx  rank.py  sheet.xlsx
app/models/: additional_schemas.py  insights_schemas.py
app/routers/: __init__.py  additional_router.py  analytics_router.py  insights_router.py
app/services/: additional_service.py  analytics.py  insights_service.py
